--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 1</title>
-    <script src="./index.js"></script>
+
 
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -15,19 +15,12 @@
 </header>
 
 <body>
-
-    <svg width="100" height="100">
-        <circle cx="50" cy="50" r="40"/>
-    </svg>
-
-    <svg width="100" height="100">
-        <rect width="100" height="100"></rect>
-    </svg>
-    <main>
-        <section></section>
-    </main>
-    <footer>
-    </footer>
+    <div>
+        <strong>Filter:</strong>
+        <label><input type="checkbox" name="US" value="1" id="filter-us-only" />US only</label>
+    </div>
+    <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
