tweaked: tutorial example with episode rating

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,11 @@
 <body>
     <div>
         <strong>Filter:</strong>
-        <label><input type="checkbox" name="US" value="1" id="filter-us-only" />US only</label>
+        <label><input type="checkbox" name="S1" value="1" id="season_1" />season 1</label>
+        <label><input type="checkbox" name="S2" value="1" id="season_2" />season 2</label>
+        <label><input type="checkbox" name="S3" value="1" id="season_3" />season 3</label>
+        <label><input type="checkbox" name="S4" value="1" id="season_4" />season 4</label>
+        <label><input type="checkbox" name="S5" value="1" id="season_5" />season 5</label>
     </div>
     <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
     <script src="./index.js"></script>
