fixed: folder structure

--- a/bar_chart/index.html
+++ b/bar_chart/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <header>
-    <h1>Frontend-data</h1>
-    <h2>GoT episode ratings</h2>
+    <h1>Breaking bad episode ratings</h1>
 </header>
 
 <body>
