--- a/pie_chart/pie.html
+++ b/pie_chart/pie.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pie</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
-    <script src="/pie.js"></script>
+    <script src="./pie.js"></script>
 </body>
 
 </html>
