fixed: refactored functions

--- a/bar_chart_2/index.html
+++ b/bar_chart_2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1</title>
+    <title>Bar chart</title>
 
 
     <link rel="stylesheet" href="./style.css">
@@ -15,8 +15,15 @@
 </header>
 
 <body>
+    <div class="radio">
+        <label><input type="radio" name="chart" value="season_1" id="filter"/>season 1 </label>
+        <label><input type="radio" name="chart" value="season_2" id="filter" />season 2 </label>
+        <label><input type="radio" name="chart" value="season_3" id="filter" />season 3 </label>
+        <label><input type="radio" name="chart" value="season_4" id="filter" />season 4 </label>
+        <label><input type="radio" name="chart" value="season_5" id="filter" />season 5 </label>
+    </div>
     <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
