--- a/D3_bar_chart/index.html
+++ b/D3_bar_chart/index.html
@@ -23,7 +23,7 @@
         <label><input type="radio" name="chart" value="season_5" id="filter" />season 5 </label>
     </div>
     <script src="https://d3js.org/d3.v7.min.js" charset="utf-8"></script>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
