fixed: last small changes

--- a/D3_bar_chart/index.html
+++ b/D3_bar_chart/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="radio">
+        <label><input type="radio" name="chart" value="alldata" id="filter"/>all seasons </label>
         <label><input type="radio" name="chart" value="season_1" id="filter"/>season 1 </label>
         <label><input type="radio" name="chart" value="season_2" id="filter" />season 2 </label>
         <label><input type="radio" name="chart" value="season_3" id="filter" />season 3 </label>
